[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "syclops"
authors = [
    {name = "Anton Elmiger", email = "anton.elmiger@dfki.de"},
    {name = "Kai von Szadkowski", email = "kai.von_szadkowski@dfki.de"},
]
description = "Syclops is a Python library for generating synthetic data for machine learning."
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"  # Using SPDX expression format
version = "1.4.3"
dynamic = ["dependencies"]

[project.scripts]
syclops = "syclops.cli:main"

[project.entry-points."syclops.plugins"]
syclops_plugin_ground = "syclops.blender.plugins.ground:Ground"
syclops_plugin_environment = "syclops.blender.plugins.environment:Environment"
syclops_plugin_scatter = "syclops.blender.plugins.scatter:Scatter"
syclops_plugin_object = "syclops.blender.plugins.object:Object"
syclops_plugin_simulated_scatter = "syclops.blender.plugins.simulated_scatter:SimulatedScatter"
syclops_plugin_crop = "syclops.blender.plugins.crop:Crop"

[project.entry-points."syclops.sensors"]
syclops_sensor_camera = "syclops.blender.sensors.camera:Camera"

[project.entry-points."syclops.outputs"]
syclops_output_rgb = "syclops.blender.sensor_outputs.rgb:RGB"
syclops_output_keypoints = "syclops.blender.sensor_outputs.keypoints:Keypoints"
syclops_output_pixel_annotation = "syclops.blender.sensor_outputs.pixel_annotation:PixelAnnotation"
syclops_output_object_positions = "syclops.blender.sensor_outputs.object_positions:ObjectPositions"
syclops_output_structured_light = "syclops.blender.sensor_outputs.structured_light:StructuredLight"

[project.entry-points."syclops.postprocessing"]
syclops_postprocessing_bounding_boxes = "syclops.postprocessing.bounding_boxes:BoundingBoxes"

[project.optional-dependencies]
# Dev dependencies.
dev = [
    "mkdocs-material==9.4.6",
    "mkdocs-glightbox==0.1.0"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
syclops = ["*.yaml", "*.blend", "*.png", ".hdr", ".jpg"]

[tool.setuptools.packages.find]
include = ["syclops*"]
exclude = ["syclops_venv*"]